<resources>
    <string name="app_name">Fitnes Hom</string>
    <string name="begin">Начать</string>
    <string name="app_description">
        Приложение для здорового питания\n\n
        Хотите питаться правильно и сбалансированно? С нашим приложением вы сможете составить рацион питания, который будет соответствовать вашим потребностям и целям.\n\n
        Основные функции приложения:\n\n
        1) Составление рационов питания. Вы можете выбрать один из готовых рационов или создать свой собственный. Приложение учитывает ваши потребности в калориях, белках, жирах и углеводах.\n\n
        2) Отслеживание потребления. Приложение поможет вам отслеживать, сколько калорий, белков, жиров и углеводов вы потребляете. Это поможет вам контролировать свой рацион и достигать поставленных целей.\n\n
        3) Составление списка покупок. На основе составленного рациона приложение поможет вам составить список покупок. Вы сможете легко и быстро купить все необходимые продукты.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Далее</string>
    <string name="current_weight">Текущий вес</string>
    <string name="enter_current_weight">Укажите ваш текущий вес</string>
    <string name="enter_target_weight">Укажите вес к которому вы стремитесь</string>
    <string name="target_weight">Желаемый вес</string>
    <string name="enter_target_calories">Укажите ежедневную норму калорий к которой вы стремитесь</string>
    <string name="target_calories">Норма калорий</string>
    <string name="enter_target_protein">Укажите количество белков в ежедневном рационе в граммах к которому вы стремитесь</string>
    <string name="target_protein">Белки</string>
    <string name="enter_target_fat">Укажите количество жиров в ежедневном рационе в граммах к которому вы стремитесь</string>
    <string name="target_fat">Жиры</string>
    <string name="enter_target_carbs">Укажите количество углеводов в ежедневном рационе в граммах к которому вы стремитесь</string>
    <string name="target_carbs">Углеводы</string>
    <string name="target">Цели\n</string>
    <string name="progress">Прогрес</string>
    <string name="racion">Рацион\n</string>
    <string name="background">Фон\n</string>
    <string name="shoping_list">Список покупок</string>
    <string name="new_racion">Новый рацион</string>
    <string name="add_recipe">Добавить рецепт</string>
    <string name="energy">Энергетическая ценность</string>
    <string name="protein">Белки</string>
    <string name="carbs">Углеводы</string>
    <string name="fat">Жиры</string>
    <string name="kcal_and_value">Энергетическая ценность: %1$d ккал</string>
    <string name="protein_and_value">Белки: %1$d</string>
    <string name="fat_and_value">Жиры: %1$d</string>
    <string name="carb_and_value">Углеводы: %1$d</string>
    <string name="enter_recipe_name">Введите название блюда</string>
    <string name="enter_weight_in_grams">Укажите вес блюда в граммах</string>
    <string name="cancel">Отменить</string>
    <string name="save">Добавить</string>
    <string name="add_to_racion">Добавить в рацион</string>
    <string name="toast_new_recipe">%1$s успешно добавлен в ваш рацион</string>
    <string name="enter_recipe_name_or_ingredient">Введите название блюда или основного ингредиента в строку поиска</string>
    <string name="empty_request">По вашему запросу ничего не найдено</string>
    <string name="empty_shopping_list">Список покупок пуст</string>
    <string name="shopping_list">Список покупок</string>
    <string name="not_enouth_data">Не достаточно данных для построения графика</string>
</resources>