<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:elevation="5dp"
    android:layout_marginTop="5dp"
    android:backgroundTint="@color/grey_light">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/ivRecipeLogo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintDimensionRatio="1:1"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_percent="0.25"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:src="@drawable/img_placeholder"
            />

        <TextView
            android:id="@+id/tvRecipeName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/tv_header_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivRecipeLogo"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="center"
            tools:text = "Яичница по марсиански"
            />

        <TextView
            android:id="@+id/tvKcal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/kcal_and_value"
            android:textColor="@color/energy"
            app:layout_constraintStart_toEndOf="@id/ivRecipeLogo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRecipeName"
            android:gravity="center"
            style="@style/property_header"
            android:paddingVertical="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            />
        <TextView
            android:id="@+id/tvProtein"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/protein_and_value"
            android:textColor="@color/protein"
            style="@style/property_header"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintStart_toEndOf="@id/ivRecipeLogo"
            app:layout_constraintTop_toBottomOf="@id/tvKcal"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/tvFat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fat_and_value"
            android:textColor="@color/fat"
            style="@style/property_header"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintStart_toEndOf="@id/ivRecipeLogo"
            app:layout_constraintTop_toBottomOf="@id/tvProtein"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            />

        <TextView
            android:id="@+id/tvCarb"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/carb_and_value"
            android:textColor="@color/carbs"
            style="@style/property_header"
            app:layout_constraintWidth_percent="0.3"
            app:layout_constraintStart_toEndOf="@id/ivRecipeLogo"
            app:layout_constraintTop_toBottomOf="@id/tvFat"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            />

        <ImageView
            android:id="@+id/btnAddToShoppingCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/tvProtein"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvKcal"
            app:layout_constraintBottom_toBottomOf="@id/tvCarb"
            android:src="@drawable/add_shopping_cart"
            />




    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>